fix (css style) : update menu on mobile and buttons

--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -53,8 +53,3 @@
   }
 }
 
-h1 {
-  img {
-    max-width: 400px;
-  }
-}
